--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">RealEstateManager</string>
+    <string name="price_text">Price</string>
+    <string name="number_of_rooms_txt">Number of rooms</string>
+    <string name="surface_txt">Surface(U+33A1)</string>
+    <string name="description_txt">Description</string>
+    <string name="sold_txt">Sold</string>
+    <string name="publication_date_txt">Publication Date</string>
+    <string name="sale_date_txt">Sale Date</string>
 </resources>
