--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="point_of_interest_nearby">Point of interest nearby</string>
     <string name="agent">Agent</string>
     <string name="details_txt">Details</string>
+    <string name="edit">Edit</string>
 </resources>
