--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,8 @@
     <string name="details_txt">Details</string>
     <string name="edit">Edit</string>
     <string name="filter">Filter</string>
+    <string name="view_on_map">View on map</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="loan_simulator">Loan simulator</string>
 </resources>
