feat: geocoding, current location, map
   - Decode properties addresses to get their location(lat, log) and filter them by
     keeping only those near the current location of the device and show them in the map

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,10 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="loan_simulator">Loan simulator</string>
+    <string name="rational_location_request_msg">To display nearby restaurants, allow Go4Lunch to access your Location.</string>
+    <string name="when_location_permission_denied">"If you continue without allowing the location permission, nearby restaurants will not be displayed neither on the map nor in the restaurants list.     "</string>
+    <string name="allow_location_permission">continue</string>
+    <string name="not_now_txt">not now</string>
+    <string name="continue_without_permission">continue without permission</string>
+    <string name="allow_location_permission_1">allow</string>
 </resources>
